# tinyops

./: .gitignore  .typos.toml  AGENTS.md  CHECKLIST.md  README.md  SPEC.md  cleanup_checklist_v2.py  cleanup_checklist_v3.py  mise.toml  pyproject.toml
.github/workflows/: autorelease.yml
.jules/: CONSISTENTLY_IGNORED.md  janitor.md  sentinel.md
tinyops/: libs_test.py  test_utils.py  test_utils_test.py
tinyops/_core/: __init__.py  error.py  error_reporting.py  test_utils.py  test_utils_test.py
tinyops/audio/: __init__.py  amplitude_to_db.py  amplitude_to_db_test.py  fade.py  fade_test.py  freq_mask.py  freq_mask_test.py  mu_law_decode.py  mu_law_decode_test.py  mu_law_encode.py  mu_law_encode_test.py  time_mask.py  time_mask_test.py
tinyops/compat/: __init__.py
tinyops/filter/: __init__.py  noise_cov.py  noise_cov_test.py  sigma_points.py  sigma_points_test.py
tinyops/image/: __init__.py  _padding.py  _utils.py  blur.py  blur_test.py  box_filter.py  box_filter_test.py  center_crop.py  center_crop_test.py  cvt_color.py  cvt_color_test.py  dilate.py  dilate_test.py  equalize_hist.py  equalize_hist_test.py  erode.py  erode_test.py  filter2d.py  filter2d_test.py  flip.py  flip_test.py  gaussian_blur.py  gaussian_blur_test.py  laplacian.py  laplacian_test.py  morphology.py  morphology_test.py  normalize.py  normalize_test.py  pad.py  pad_test.py  resize.py  resize_test.py  rotate.py  rotate_test.py  scharr.py  scharr_test.py  sobel.py  sobel_test.py  threshold.py  (+5 more)
tinyops/io/: __init__.py  decode_bmp.py  decode_bmp_test.py  decode_wav.py  decode_wav_test.py  decode_wav_vuln_test.py  encode_bmp.py  encode_bmp_test.py  encode_wav.py  encode_wav_test.py
tinyops/linalg/: __init__.py  cholesky.py  cholesky_test.py  cond.py  cond_test.py  det.py  det_test.py  diagonal.py  diagonal_test.py  dot.py  dot_test.py  einsum.py  einsum_test.py  inner.py  inner_test.py  inv.py  inv_test.py  (+26 more)
(+294 files in other folders)
