[project]
name = "tinyops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tinygrad>=0.11.0",
]

[dependency-groups]
dev = [
    "numpy>=2.4.0",
    "pytest>=9.0.2",
    "opencv-python>=4.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tinyops"]
python_files = ["*_test.py"]
